--- a/app/src/main/res/layout/msg_item.xml
+++ b/app/src/main/res/layout/msg_item.xml
@@ -3,15 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="60dp">
+    android:layout_height="80dp">
 
     <ImageView
         android:id="@+id/image_profile"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
         android:layout_weight="1"
         android:contentDescription="@string/profile_image"
         android:scaleType="centerCrop"
@@ -23,13 +23,15 @@
     <TextView
         android:id="@+id/text_name"
         android:layout_width="0dp"
-        android:layout_height="20dp"
+        android:layout_height="0dp"
         android:layout_marginStart="13dp"
-        android:layout_marginTop="6dp"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="2dp"
         android:ellipsize="end"
         android:singleLine="true"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/text_content"
         app:layout_constraintEnd_toStartOf="@+id/text_time"
         app:layout_constraintStart_toEndOf="@+id/image_profile"
         app:layout_constraintTop_toTopOf="parent" />
@@ -37,14 +39,14 @@
     <TextView
         android:id="@+id/text_content"
         android:layout_width="0dp"
-        android:layout_height="20dp"
+        android:layout_height="0dp"
         android:layout_marginStart="13dp"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginBottom="15dp"
         android:ellipsize="end"
         android:singleLine="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/line"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/image_profile"
         app:layout_constraintTop_toBottomOf="@+id/text_name" />
@@ -55,20 +57,36 @@
         android:layout_height="20dp"
         android:layout_marginTop="6dp"
         android:layout_marginEnd="8dp"
-        android:textAlignment="textEnd"
         android:singleLine="true"
+        android:textAlignment="textEnd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/line"
         android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:layout_marginEnd="8dp"
+        android:layout_height="1dp"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/image_profile"
         tools:background="@android:color/darker_gray" />
+
+    <TextView
+        android:id="@+id/text_name_first"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:textSize="24sp"
+        android:gravity="center"
+        android:textColor="#000"
+        app:layout_constraintBottom_toBottomOf="@+id/image_profile"
+        app:layout_constraintEnd_toEndOf="@+id/image_profile"
+        app:layout_constraintStart_toStartOf="@+id/image_profile"
+        app:layout_constraintTop_toTopOf="@+id/image_profile" />
 </android.support.constraint.ConstraintLayout>
