--- a/app/src/main/res/layout/activity_messages_list.xml
+++ b/app/src/main/res/layout/activity_messages_list.xml
@@ -6,24 +6,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".MessagesList">
+    tools:context=".MessagesActivity">
 
     <com.stfalcon.chatkit.messages.MessagesList
         android:id="@+id/messagesList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/input"
-        app:dateHeaderFormat="dd MMMM yyyy"
-        app:incomingDefaultBubbleColor="@color/dialog_unread_text"
-        app:incomingDefaultBubblePressedColor="@color/dialog_date_text"
+        app:dateHeaderFormat="yyyy년 MM월 dd일"
+        app:incomingDefaultBubbleColor="#EEE"
+        app:incomingDefaultBubblePressedColor="#DDD"
         app:incomingDefaultBubbleSelectedColor="@color/gray"
-        app:incomingDefaultImageOverlayPressedColor="@color/dialog_title_text"
-        app:incomingDefaultImageOverlaySelectedColor="@color/white60"
-        app:incomingTextColor="#00FF00"
+        app:incomingTextColor="#000"
         app:incomingTextLinkColor="@color/dark_mint"
         app:incomingTextSize="18sp"
-        app:outcomingDefaultBubbleColor="@color/dialog_unread_text"
-        app:outcomingDefaultBubblePressedColor="@color/colorPrimary"
+        app:outcomingDefaultBubbleColor="@color/colorPrimary"
+        app:outcomingDefaultBubblePressedColor="@color/colorPrimaryDark"
         app:outcomingDefaultBubbleSelectedColor="@color/cornflower_blue_two_24"
         app:outcomingDefaultImageOverlayPressedColor="@color/dialog_title_text"
         app:outcomingDefaultImageOverlaySelectedColor="@color/transparent"
