--- a/app/src/main/res/layout/activity_messages_list.xml
+++ b/app/src/main/res/layout/activity_messages_list.xml
@@ -22,8 +22,8 @@
         app:incomingTextSize="18sp"
         app:outcomingDefaultBubbleColor="@color/colorPrimary"
         app:outcomingDefaultBubblePressedColor="@color/colorPrimaryDark"
-        app:outcomingDefaultBubbleSelectedColor="@color/cornflower_blue_two_24"
-        app:outcomingDefaultImageOverlayPressedColor="@color/dialog_title_text"
+        app:outcomingDefaultBubbleSelectedColor="@color/white"
+        app:outcomingDefaultImageOverlayPressedColor="@color/white"
         app:outcomingDefaultImageOverlaySelectedColor="@color/transparent"
         app:outcomingTextColor="@color/white"
         app:outcomingTextLinkColor="@color/blue"
