--- a/app/src/main/res/layout/activity_add_drawer.xml
+++ b/app/src/main/res/layout/activity_add_drawer.xml
@@ -40,12 +40,13 @@
         <EditText
             android:id="@+id/editKeyword1"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="26dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="26dp"
             android:hint="키워드"
             android:inputType="text"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -53,12 +54,13 @@
         <EditText
             android:id="@+id/editKeyword2"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="26dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="26dp"
             android:hint="키워드"
             android:inputType="text"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.056"
             app:layout_constraintStart_toStartOf="parent"
@@ -67,12 +69,13 @@
         <EditText
             android:id="@+id/editKeyword3"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="26dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="26dp"
             android:hint="키워드"
             android:inputType="text"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editKeyword2" />
@@ -93,12 +96,13 @@
         <EditText
             android:id="@+id/editNumber1"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="26dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="26dp"
             android:hint="번호"
             android:inputType="phone"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -106,12 +110,13 @@
         <EditText
             android:id="@+id/editNumber2"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="26dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="13dp"
             android:layout_marginEnd="26dp"
             android:hint="번호"
             android:inputType="phone"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editNumber1" />
@@ -119,12 +124,13 @@
         <EditText
             android:id="@+id/editNumber3"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="26dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="26dp"
             android:hint="번호"
             android:inputType="phone"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editNumber2" />
